--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Página de Inicio{% endblock %}
+{% block titulo %}Inicio{% endblock %}
 
-{% block content %}
-    <h1>¡Bienvenido a mi sitio web con Flask!</h1>
-    <p>Esta es la página de inicio. El contenido de esta página se inyecta en la plantilla base (base.html).</p>
+{% block contenido %}
+    <h2>Bienvenido a la página principal</h2>
+    <p>Utiliza la barra de navegación para acceder al formulario.</p>
 {% endblock %}
