--- a/templates/index.html
+++ b/templates/index.html
@@ -4,5 +4,5 @@
 
 {% block contenido %}
     <h2>Bienvenido a la página principal</h2>
-    <p>Utiliza la barra de navegación para acceder al formulario.</p>
+    <p>Ingenieria en TICS.</p>
 {% endblock %}
